# airoapi

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  devenv.nix  docker-compose.yml  shell.nix  wrangler.toml
.github/workflows/: docker.yml
src/: database.rs  flight_contract.rs  lib.rs  main.rs  pages.rs
