[package]
name = "airoapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bb8 = "0.9.0"
bb8-redis = "0.20.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.26"
redis = { version = "0.28.2", features = ["json"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
tokio-test = "0.4.4"
toml = "0.8.20"
tracing = "0.1.41"
